[metadata]
name = timeflux-upsidedownlabs
description = Connect to Upside Down Labs devices using Timeflux
long_description = file: README.rst
author = Pierre Clisson
author_email = contact@timeflux.io
license = MIT
home_page = https://timeflux.io
project_urls =
    Documentation = http://doc.timeflux.io/projects/timeflux-upsidedownlabs/
    Source Code = https://github.com/timeflux/timeflux_upsidedownlabs
    Bug Tracker = https://github.com/timeflux/timeflux_upsidedownlabs/issues
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = timeflux

[options]
packages = find:
install_requires =
    timeflux>=0.16.1
    timeflux_audio>=0.2
    timeflux_ui>=0.6.3
    pyFirmata2>=2.4.5

[docinit]
name = Upside Down Labs plugin
parent_url = https://doc.timeflux.io
logo_url = https://github.com/timeflux/timeflux/raw/master/doc/static/img/logo.png

[build_sphinx]
warning-is-error = 1